--- a/Web.UI/Views/Donate/Donate.cshtml
+++ b/Web.UI/Views/Donate/Donate.cshtml
@@ -15,10 +15,55 @@
         </h3>
     </div>
     <div class="panel-body">
-
-        <div class="container content help-content-padding">
+        <div class="container content ">
+                <div class="mission-msg mission">
+                    <p class="mission-text large-font">FindMyFamilies is a small nonprofit with a big mission: provide the tools necessary for family history research.</p>
+                    <p class="mission-text small-font">With fewer employees, FindMyFamilies hopes to serves millions of users each month with helpful tutorial videos and lessons.</p>
+                </div>
+                <div class="divider" data-reactid=".1.1.1"></div>
+                <form class="form-donation">
+                    <div><label for="inputsm">YOUR SUPPORT</label></div>
+                    <div class="btn-group" data-toggle="buttons">
+                        <label class="btn btn-primary btn-lg active btn-width-row1">
+                            <input type="radio" name="monthly" id="monthly" autocomplete="off" checked> Monthly
+                        </label>
+                        <label class="btn btn-primary btn-lg btn-width-row1">
+                            <input type="radio" name="oneTime" id="oneTime" autocomplete="off"> One-Time
+                        </label>
+                    </div>
+                    
+                    <div><label for="inputsm">YOUR AMOUNT</label></div>
+                    <div class="btn-group" data-toggle="buttons">
+                        <label class="btn btn-primary btn-lg active btn-width-row2">
+                            <input type="radio" name="threeDollars" id="threeDollars" autocomplete="off" checked> $3
+                        </label>
+                        <label class="btn btn-primary btn-lg btn-width-row2">
+                            <input type="radio" name="tenDollars" id="tenDollars" autocomplete="off"> $10
+                        </label>
+                        <label class="btn btn-primary btn-lg btn-width-row2">
+                            <input type="radio" name="twentyFiveDollars" id="twentyFiveDollars" autocomplete="off"> $25
+                        </label>
+                        <label class="btn btn-primary btn-lg btn-width-row2">
+                            <input type="radio" name="fiftyDollars" id="fiftyDollars" autocomplete="off"> $50
+                        </label>
+                        <label class="btn btn-primary btn-lg btn-width-row2">
+                            <input type="radio" name="twoFiftyDollars" id="twoFiftyDollars" autocomplete="off"> $250
+                        </label>
+                        <label class="btn btn-primary btn-lg btn-width-row2">
+                            <input type="radio" name="other" id="other" autocomplete="off"> Other
+                        </label>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="name">YOUR NAME</label>
+                        <input class="form-control input-lg" id="name" type="text">
+                    </div>
+                             
+                    <div class="form-group">
+                        <input type="button" id="paypal" class="btn btn-primary btn-lg" value="Pay With PayPal">
+                    </div>           
+                </form>
         </div><!--/container-->
-
     </div>
 </div>
 
